Added tlog and lastbuildstate files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ artifacts/
 *.tmp
 *.tmp_proj
 *.log
+*.tlog
 *.vspscc
 *.vssscc
 .builds
@@ -210,3 +211,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+.lastbuildstate
