--- a/PlayerController/PlayerController.vcxproj
+++ b/PlayerController/PlayerController.vcxproj
@@ -73,7 +73,7 @@
     <IncludePath>..\Lib\glm;..\Lib\glew-1.13.0\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>..\Lib\glm;..\Lib\glew-1.13.0\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>..\Lib\glm;..\Lib\glew-1.13.0\include;..\Lib\glfw-3.1.1\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
