--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,11 @@ ModelManifest.xml
 *.log
 *.tlog
 *.exe
+*.iobj
+*.ipdb
+
+# Delete these lines if rebuilding the project gets too slow
+*Core.lib
+*PlayerController.lib
+*RenderSystem.lib
+*WindowContext.lib
