--- a/RenderSystem/RenderSystem.vcxproj.filters
+++ b/RenderSystem/RenderSystem.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClInclude Include="utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RenderSystem.cpp">
