fixed Core cmake build

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 set(CMAKE_LEGACY_CYGWIN_WIN32 0)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 
 set(BASE_DIR ..)
 set(RAPIDJSON ${BASE_DIR}/rapidjson/include)
-set(LIB_HEADERS ${RAPIDJSON}/rapidjson/document.h) 
-include_directories(${BASE_DIR}/rapidjson/include/)
+set(GLM ${BASE_DIR}/glm)
+include_directories(${RAPIDJSON} ${GLM})
+
+set(LIB_HEADERS ${RAPIDJSON}/rapidjson/document.h)
 
 project("Core")
 
