--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/g-truc/glm
+[submodule "glbinding"]
+	path = glbinding
+	url = https://github.com/cginternals/glbinding
+[submodule "SFML"]
+	path = SFML
+	url = https://github.com/SFML/SFML
+[submodule "assimp"]
+	path = assimp
+	url = https://github.com/assimp/assimp
