--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,12 @@ set(RAPIDJSON ${BASE_DIR}/rapidjson/include)
 set(GLM ${BASE_DIR}/glm)
 set(SFML ${BASE_DIR}/SFML/include)
 set(ASSIMP ${BASE_DIR}/assimp/include)
-set(INCLUDES ${RAPIDJSON} ${GLM} ${SFML} ${ASSIMP} ${GLBINDING})
+set(GLFW ${BASE_DIR}/glfw/include)
+#set(INCLUDES ${RAPIDJSON} ${GLM} ${SFML} ${ASSIMP} ${GLBINDING} ${GLFW})
 
-find_package(glfw3 3.2 REQUIRED)
+#find_package(glfw3 3.2 REQUIRED)
+#find_package(assimp 4.1 REQUIRED)
+#find_package(SFML 2 CONFIG REQUIRED graphics)
 
 link_directories(Core
                  PlayerController
@@ -20,6 +23,7 @@ link_directories(Core
                  assimp/lib
                  glbinding
                  SFML/lib
+                 glfw/src
                  )
 
 add_subdirectory(Core)
