Fixed library includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,13 @@ set(CMAKE_CXX_STANDARD 14)
 cmake_policy(SET CMP0015 NEW)
 
 set(BASE_DIR ..)
-set(GLBINDING ${BASE_DIR}/source/include)
+set(GLBINDING ${BASE_DIR}/glbinding/source/glbinding/include)
 set(RAPIDJSON ${BASE_DIR}/rapidjson/include)
 set(GLM ${BASE_DIR}/glm)
 set(SFML ${BASE_DIR}/SFML/include)
 set(ASSIMP ${BASE_DIR}/assimp/include)
 set(GLFW ${BASE_DIR}/glfw/include)
-#set(INCLUDES ${RAPIDJSON} ${GLM} ${SFML} ${ASSIMP} ${GLBINDING} ${GLFW})
+set(INCLUDES ${RAPIDJSON} ${GLM} ${SFML} ${ASSIMP} ${GLBINDING} ${GLFW})
 
 #find_package(glfw3 3.2 REQUIRED)
 #find_package(assimp 4.1 REQUIRED)
